# mcu_meson

./: .gitignore  README.md  armclang.ini  clang-cortex-m0+.ini  clang-cortex-m0.ini  clang-cortex-m23.ini  clang-cortex-m3.ini  clang-cortex-m33.ini  clang-cortex-m4.ini  clang-cortex-m4s.ini  cortex-m4.ini  gcc-arm-none-eabi.ini  gcc-cortex-m0+.ini  gcc-cortex-m0.ini  gcc-cortex-m23.ini  gcc-cortex-m3.ini  gcc-cortex-m33.ini  gcc-cortex-m4.ini  gcc-cortex-m4s.ini  meson.build  setup.py  setup_helper.py
example/: .gitignore  lib.h  meson.build  setup.py
example/src/: lib.c  my_link.ld  my_link.sct
mcu_meson_setup/: .gitignore  mcu_meson_setup.py  pyproject.toml
test/: test.cc
